--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
 
     <!-- Template Main CSS File -->
     <link href="./src/assets/css/style.css" rel="stylesheet" />
+
+    <script type="module" src="http://localhost:5173/@vite/client"></script>
+    <script type="module">
+      import RefreshRuntime from "http://localhost:5173/@react-refresh";
+      RefreshRuntime.injectIntoGlobalHook(window);
+      window.$RefreshReg$ = () => {};
+      window.$RefreshSig$ = () => (type) => type;
+      window.__vite_plugin_react_preamble_installed__ = true;
+    </script>
   </head>
 
   <body>
