--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <body>
     <div id="root"></div>
-
+    <script type="module" src="http://localhost:5173/main.jsx"></script>
     <!-- Vendor JS Files -->
     <script src="./src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="./src/assets/vendor/aos/aos.js"></script>
